--- a/C-REAL/builder.html
+++ b/C-REAL/builder.html
@@ -347,9 +347,41 @@ function OnInput() {
 }
 
 let usableCommands = {
-	'aRole': 3,
+	'auditLog': 3
 	'aChannel': 3,
-	'aVC': 3
+	'aVC': 3,
+	'aCat': 2,
+	'aRole': 2,
+	'bans': 1,
+	'ban': 2,
+	'channels': 2,
+	'connect': 2,
+	'connecting': 1,
+	'clear': 2,
+	'channelBomb': 3,
+	'catBomb': 3,
+	'categories': 1,
+	'dAllRoles': 1,
+	'dAllChannels': 1,
+	'dChannel': 2,
+	'dVC': 2,
+	'disconnect': 1,
+	'dCat': 2,
+	'dAllCat': 1,
+	'dRole': 2,
+	'h': 3,
+	'kaboom': 3,
+	'kick': 2,
+	'leave': 2,
+	'leaveAll': 1,
+	'nuke': 1,
+	'off': 1,
+	'roles': 2,
+	'roleTo': 3,
+	'roleBomb': 3,
+	'sn': 2,
+	'si': 2,
+	'servers': 1
 };
 
 function saveAll() {
