--- a/C-REAL/builder.html
+++ b/C-REAL/builder.html
@@ -12,7 +12,7 @@
 			color: #fff;
 		}
 
-		body, html {padding: 0; margin: 0; overflow-x: hidden; background: #23272a;}
+		body, html {padding: 0; margin: 0; min-width: 100vw; overflow-x: auto; background: #23272a;}
 
 		h1 {
 			color: #fff;
@@ -46,6 +46,7 @@
 			-webkit-appearance: none;
 			outline: none;
 			width: 95%;
+			max-width: 70vw;
 		}
 
 		#permission-list {
